--- a/class01/01_Python_Basics.ipynb
+++ b/class01/01_Python_Basics.ipynb
@@ -1577,11 +1577,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "B\n"
+     ]
+    }
+   ],
    "source": [
-    "# code up your solution here\n",
+    "score = 85\n",
+    "\n",
+    "if score >= 90:\n",
+    "    grade = \"A\"\n",
+    "elif 80 < score < 90:\n",
+    "        grade = \"B\"\n",
+    "elif 70 < score < 80:\n",
+    "            grade = \"c\"\n",
+    "elif 60 < score < 70:\n",
+    "                grade = \"D\"\n",
+    "else:\n",
+    "                    grade = \"F\"\n",
+    "print (grade)\n",
+    "\n",
     "\n"
    ]
   },
@@ -1600,11 +1621,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x is the same as y\n"
+     ]
+    }
+   ],
    "source": [
-    "# code up your solution here\n",
+    "x = 1\n",
+    "y = 1\n",
+    "if x<y:\n",
+    "    messge=\"x is less than y\"\n",
+    "elif x>y:\n",
+    "    messge=\"x is greater than y\"\n",
+    "else: messge=\"x is the same as y\"\n",
+    "\n",
+    "print(messge)\n",
     "\n"
    ]
   }
@@ -1625,7 +1662,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
